ansible/roles/nginx/files/nginx_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  labels:
    app: nginx
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /nginx
        pathType: "Prefix"
        backend:
          service:
            name: nginx-srv
            port:
              number: 80
